--- a/locale/bg_BG/LC_MESSAGES/Time-Line.po
+++ b/locale/bg_BG/LC_MESSAGES/Time-Line.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-03-23 12:35+0200\n"
-"PO-Revision-Date: 2015-03-23 12:43+0200\n"
+"POT-Creation-Date: 2015-09-15 17:10+0700\n"
+"PO-Revision-Date: 2015-09-15 17:11+0700\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: bg\n"
@@ -17,57 +17,121 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.7.5\n"
 
-#: Time-Line.pyw:64
+#: Time-Line.pyw:56
+msgid "Error"
+msgstr "Грешка"
+
+#: Time-Line.pyw:57
+msgid "Database error:"
+msgstr "Грешка в базата от данни:"
+
+#: Time-Line.pyw:94
 msgid "New project"
 msgstr "Нов проект"
 
-#: Time-Line.pyw:65
+#: Time-Line.pyw:95 Time-Line.pyw:462
 msgid "Project"
 msgstr "Проект"
 
-#: Time-Line.pyw:81 Time-Line.pyw:159
+#: Time-Line.pyw:112 Time-Line.pyw:252
 msgid "Start"
 msgstr "Начало"
 
-#: Time-Line.pyw:84 Time-Line.pyw:160
+#: Time-Line.pyw:115 Time-Line.pyw:253
 msgid "Press button to start the counter."
 msgstr "Натиснете бутона, за да стартирате брояча."
 
-#: Time-Line.pyw:90
+#: Time-Line.pyw:121
 msgid "Add"
 msgstr "Добави"
 
-#: Time-Line.pyw:93
+#: Time-Line.pyw:124
 msgid "Delete"
 msgstr "Изтриване"
 
-#: Time-Line.pyw:117
+#: Time-Line.pyw:146
+msgid "Show &Times..."
+msgstr "Показване на &Часовете..."
+
+#: Time-Line.pyw:150
+msgid "&Exit"
+msgstr "&Изход"
+
+#: Time-Line.pyw:155
+msgid "&File"
+msgstr "&Файл"
+
+#: Time-Line.pyw:165
 msgid "Time-Line"
 msgstr "Time-Line"
 
-#: Time-Line.pyw:125
+#: Time-Line.pyw:218
 msgid "Stop"
 msgstr "Спиране"
 
-#: Time-Line.pyw:126
+#: Time-Line.pyw:219
 msgid "Press button to stop and save the counter."
 msgstr "Натиснете бутона, за да спрете и съхраните брояча."
 
-#: Time-Line.pyw:183
+#: Time-Line.pyw:276
 msgid "Info"
 msgstr "Информация"
 
-#: Time-Line.pyw:184
+#: Time-Line.pyw:277
 msgid "Please Enter a project name."
 msgstr "Моля, въведете име на проекта."
 
-#: Time-Line.pyw:223
+#: Time-Line.pyw:316
 msgid "Confirmation"
 msgstr "Потвърждение"
 
-#: Time-Line.pyw:224
+#: Time-Line.pyw:317
 #, python-format
 msgid "Are you sure you want to delete project %s and all his records?"
 msgstr ""
 "Сигурни ли сте, че искате да изтриете проекта %s заедно с всички негови "
 "записи?"
+
+#: Time-Line.pyw:459
+msgid "Show Times"
+msgstr "Показване на часовете"
+
+#: Time-Line.pyw:474
+msgid "Select range"
+msgstr "Избор на обхват"
+
+#: Time-Line.pyw:475
+msgid "To"
+msgstr "До"
+
+#: Time-Line.pyw:486
+msgid "Options"
+msgstr "Опции"
+
+#: Time-Line.pyw:487
+msgid "Show time per day within range"
+msgstr "Показване на часовете за ден в зададения обхват"
+
+#: Time-Line.pyw:490
+msgid "Show non-working days"
+msgstr "Показване на неработните дни"
+
+#: Time-Line.pyw:500
+msgid "&Show Result"
+msgstr "&Показване на резултат"
+
+#: Time-Line.pyw:503
+msgid "&Close"
+msgstr "&Затваряне"
+
+#: Time-Line.pyw:583
+msgid "none"
+msgstr "няма"
+
+#: Time-Line.pyw:590
+msgid "Total time: "
+msgstr "Общо време:"
+
+#: Time-Line.pyw:591
+msgid "Dates are in UTC"
+msgstr "Датите са в UTC"
